dark mode corrections

--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -6,7 +6,7 @@
 }
 
 .dark .footer {
-  background: var(--dark-alt);
+  background: rgb(146, 154, 222);
 }
 
 .footer-content {
